design layout issue fixed

--- a/Sass/desktop.css
+++ b/Sass/desktop.css
@@ -79,7 +79,7 @@
 }
 
 .joinUs-section {
-  min-height: 250px;
+  /* min-height: 250px; */
   font-style: italic;
 }
 
